--- a/src/sass/components/_code.scss
+++ b/src/sass/components/_code.scss
@@ -7,7 +7,6 @@
  kbd,
  pre,
  samp {
- 	border-radius: 1px;
 	font-family: $font-monospace;
 	font-size: 0.875em;
 }
