--- a/src/sass/components/_forms.scss
+++ b/src/sass/components/_forms.scss
@@ -60,7 +60,6 @@ input,
 textarea,
 select {
 	border: 1px solid lighten( $color-gray-dark, 22% );
-	border-radius: 1px;
 	display: block;
 	line-height: 1.5;
 	margin-bottom: 1.1875em;
