--- a/src/sass/components/_overrides.scss
+++ b/src/sass/components/_overrides.scss
@@ -5,15 +5,6 @@
 
 
 /**
- * Background colors
- */
-
-.bg-muted {
-	background-color: $color-gray-lighter;
-}
-
-
-/**
  * Text sizes
  */
 
